--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "body-parser": "^1.18.2",
+    "chance": "^1.0.12",
     "express": "^4.16.2",
     "leaflet": "^1.2.0",
     "leaflet-draw": "^0.4.13",
